Add integration tests for RFQ, rewards, and account endpoints